# AdventOfCode

./: README.md
.github/workflows/: main.yml
2020/Day03/: day_3.py
2020/Day04/: day_4.py
2020/Day07/: day_7.py
2020/Day1/: day_1.py
2020/Day11/: day_11.py
2020/Day12/: day_12.py
2020/Day13/: day_13.py
2020/Day16/: day_16.py
2020/Day19/: day_19.py
2020/Day20/: day_20.py
2020/Day22/: day_22.py
2020/Day24/: first_try_connec.py
2020/Day4/: info.txt
2020/Day5/: day_5.py
2020/Day9/: day_9.py
2021/Day04/: day_4.py
2021/Day08/: day_8.py
2021/Day10/: day_10.py
2021/Day11/: day_11.py
2021/Day12/: day_12.py
2021/Day13/: day_13.py
2021/Day14/: day_14.py
2021/Day15/: day_15.py
2021/Day16/: day_16.py
2021/Day17/: day_17.py
2021/Day18/: F_day_18.py  day_18.py
2022/: .gitignore  CMakeLists.txt
2022/Day00/: day00.cpp  main
2022/Day01/: day01.cpp
2022/Day02/: day02.cpp
2022/Day03/: day03.cpp
2022/Day04/: day04.cpp
2022/Day05/: day05.cpp
2022/Day06/: day06.cpp
2022/Day07/: day07.cpp
2022/Day08/: day08.cpp
2022/Day09/: day09.cpp
2022/Day10/: day10.cpp
2022/Day11/: day11.cpp
2022/Day12/: day12.cpp
2022/Day13/: day13.cpp
2022/Day14/: day14.cpp
2022/Day15/: day15.cpp
2022/Day16/: day16.cpp
2022/Day17/: day17.cpp
2022/Day18/: day18.cpp
2022/Day19/: day19.cpp
2022/Day20/: day20.cpp
2022/Day21/: day21.cpp
2022/Day22/: day22.cpp
2022/Day23/: day23.cpp
2022/Day24/: day24.cpp
2022/Day25/: day25.cpp
2022/include/: include.h  main.h
2022/scripts/: configure.sh
2022/src/: main.cpp
2023/: .gitignore  CMakeLists.txt
2023/Day01/: day01.cpp
2023/Day02/: day02.cpp
2023/Day03/: day03.cpp
2023/Day04/: day04.cpp
2023/Day05/: day05.cpp
2023/Day06/: day06.cpp
2023/Day07/: day07.cpp
2023/Day08/: day08.cpp
2023/Day09/: day09.cpp
2023/Day10/: day10.cpp
2023/Day11/: day11.cpp
2023/Day12/: day12.cpp
2023/Day13/: day13.cpp
2023/Day14/: day14.cpp
2023/Day15/: day15.cpp
2023/Day16/: day16.cpp
2023/Day18/: day18.cpp
2023/Day19/: day19.cpp
2023/Day20/: day20.cpp
2023/Day21/: day21.cpp
2023/include/: include.h  main.h
2023/src/: main.cpp
2024/: CMakeLists.txt
2025/: CMakeLists.txt
Day10/: day_10.py
Day11/: day_11.py
Day13/: day_13.py
Day14/: day_14.py
Day15/: day_15.py
Day16/: day_16.py
Day17/: day_17.py
Day18/: day_18.py
Day19/: day_19.py  test3.txt
Day2/: day_2.py
Day20/: day_20.py  day_20_2.py
Day21/: day_21.py
Day23/: day_23.py
Day24/: day_24.py
Day25/: day_25.py
Day4/: day_4.py
Day6/: day_6.py  input.txt
Day7/: day_7.py
Day8/: day_8.py
(+67 files in other folders)
